TINY-14160: apply correct color in dark mode for secondary background (#11043)
Related Ticket: TINY-14160

Description of Changes:

- Added `--tox-private-background-secondary` CSS custom property to global custom properties with light-dark theme support
- Updated AI chat component to use LESS contrast-based background colors for figma secondary background variable

Pre-checks:

- [x] ~~Changelog entry added~~
- [x] ~~Tests have been added (if applicable)~~
- [x] Branch prefixed with `feature/`, `hotfix/` or `spike/`

Review:

- [x] Milestone set
- [x] ~~Docs ticket created (if applicable)~~

GitHub issues (if applicable):

--- a/modules/oxide/src/less/theme/globals/global-custom-properties.less
+++ b/modules/oxide/src/less/theme/globals/global-custom-properties.less
@@ -3,6 +3,11 @@
   // Root variables
   // Begin customization by changing these variables as most other variables are derivatives of these.
   --tox-private-background-color: light-dark(#fff, #222F3E);
+  --tox-private-background-secondary: light-dark(
+    hsl(from var(--tox-private-background-color) h s calc(l - 6)),
+    hsl(from var(--tox-private-background-color) h s calc(l + 7))
+  );
+
   --tox-private-base-value: 16px;
   --tox-private-color-black: #222f3e;
   --tox-private-color-tint: #006ce7;
